--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,7 @@
     </properties>
 
     <dependencies>
-        <!-- Add dependencies here if needed -->
-    </dependencies>
+        </dependencies>
 
     <build>
         <plugins>
@@ -25,6 +24,16 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>  <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.example.App</mainClass>  </manifest>
+                    </archive>
                 </configuration>
             </plugin>
         </plugins>
